--- a/DayTourSearchEngine/src/view/SearchFrame.form
+++ b/DayTourSearchEngine/src/view/SearchFrame.form
@@ -409,6 +409,7 @@
         </Component>
         <Component class="javax.swing.JCheckBox" name="showAllCheckBox">
           <Properties>
+            <Property name="selected" type="boolean" value="true"/>
             <Property name="text" type="java.lang.String" value="Show all trips from this date."/>
           </Properties>
           <Events>
